--- a/paper/paper-refs.bib
+++ b/paper/paper-refs.bib
@@ -1,3 +1,232 @@
+@online{web-smashpp,
+  title={Smash++},
+  author={Hosseini, Morteza and Pratas, Diogo and Pinho, Armando J},
+  url={https://github.com/smortezah/smashpp},
+  date={\today}
+}
+
+@online{web-goose,
+  title={GOOSE},
+  author={Pratas, Diogo},
+  url={https://github.com/pratas/goose},
+  date={\today}
+}
+
+@article{blackman1959particular,
+  title={Particular pairs of windows},
+  author={Blackman, RB and Tukey, JW},
+  journal={The measurement of power spectra, from the point of view of communications engineering},
+  pages={95--101},
+  year={1959},
+  publisher={Dover New York}
+}
+
+@article{bartlett1950periodogram,
+  title={Periodogram analysis and continuous spectra},
+  author={Bartlett, Maurice S},
+  journal={Biometrika},
+  volume={37},
+  number={1/2},
+  pages={1--16},
+  year={1950},
+  publisher={JSTOR}
+}
+
+@book{tukey1949measuring,
+  title={Measuring noise color},
+  author={Tukey, John Wilder and Hamming, Robert Wesley},
+  year={1949},
+  publisher={Bell Telephone Laboratories}
+}
+
+@article{welch1967use,
+  title={The use of fast {Fourier} transform for the estimation of power spectra: a method based on time averaging over short, modified periodograms},
+  author={Welch, Peter},
+  journal={IEEE Transactions on audio and electroacoustics},
+  volume={15},
+  number={2},
+  pages={70--73},
+  year={1967},
+  publisher={IEEE}
+}
+
+@article{nuttall1981some,
+  title={Some windows with very good sidelobe behavior},
+  author={Nuttall, Albert},
+  journal={IEEE Transactions on Acoustics, Speech, and Signal Processing},
+  volume={29},
+  number={1},
+  pages={84--91},
+  year={1981},
+  publisher={IEEE}
+}
+
+@article{harris1978use,
+  title={On the use of windows for harmonic analysis with the discrete {Fourier} transform},
+  author={Harris, Fredric J},
+  journal={Proceedings of the IEEE},
+  volume={66},
+  number={1},
+  pages={51--83},
+  year={1978},
+  publisher={IEEE}
+}
+
+@book{oppenheim1999discrete,
+  title={Discrete-Time Signal Processing},
+  author={Oppenheim, Alan V. and Ronald W. Schafer and John R. Buck},
+  pages={468--471},
+  year={1999},
+  publisher={Upper Saddle River, NJ: Prentice Hall}
+}
+
+@article{hosseini2019ac,
+author="Hosseini, Morteza and Pratas, Diogo and Pinho, Armando J.",
+title="{AC}: A Compression Tool for Amino Acid Sequences",
+journal="Interdisciplinary Sciences: Computational Life Sciences",
+year="2019",
+volume="11",
+number="1",
+pages="68--76",
+issn="1867-1462",
+doi="10.1007/s12539-019-00322-1"
+}
+
+@inproceedings{pratas2017substitutional,
+  title={Substitutional tolerant {Markov} models for relative compression of {DNA} sequences},
+  author={Pratas, Diogo and Hosseini, Morteza and Pinho, Armando J},
+  booktitle={International Conference on Practical Applications of Computational Biology \& Bioinformatics (PACBB)},
+  pages={265--272},
+  year={2017},
+  organization={Springer}
+}
+
+@article{morris1978counting,
+ author = {Morris, Robert},
+ title = {Counting Large Numbers of Events in Small Registers},
+ journal = {Commun. ACM},
+ //issue_date = {Oct. 1978},
+ volume = {21},
+ number = {10},
+ //month = oct,
+ year = {1978},
+ //issn = {0001-0782},
+ pages = {840--842},
+ //numpages = {3},
+ //url = {http://doi.acm.org/10.1145/359619.359627},
+ //doi = {10.1145/359619.359627},
+ //acmid = {359627},
+ publisher = {ACM},
+ //address = {New York, NY, USA}
+}
+
+@inproceedings{pitel2015count,
+  title={Count-min-log sketch: Approximately counting with approximate counters},
+  author={Pitel, Guillaume and Fouquier, Geoffroy},
+  booktitle={{International Symposium on Web AlGorithms}},
+  year={Jun 2015},
+  address = {Deauville, France}
+}
+
+@article{pratas2015alignment,
+  title={An alignment-free method to find and visualise rearrangements between pairs of {DNA} sequences},
+  author={Pratas, Diogo and Silva, Raquel M and Pinho, Armando J and Ferreira, Paulo JSG},
+  journal={Scientific reports},
+  volume={5},
+  pages={10203},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+
+@article{hosseini2018cryfa,
+  title={Cryfa: a secure encryption tool for genomic data},
+  author={Hosseini, Morteza and Pratas, Diogo and Pinho, Armando J},
+  journal={Bioinformatics},
+  volume={35},
+  number={1},
+  pages={146--148},
+  year={2018},
+  publisher={Oxford University Press}
+}
+
+@article{turing1936on,
+  title   = {On computable numbers, with an application to the {Entscheidungsproblem}},
+  author  = {Turing, Alan},
+  journal = {Proceedings of the London Mathematical Society},
+  volume  = {42},
+  number  = {2},
+  pages   = {230--265},
+  year    = {1936}
+}
+
+@book{li2009an,
+  title   = {An introduction to {Kolmogorov} complexity and its applications},
+  author  = {Li, M. and Vit{\'a}nyi, P.},
+  edition = {3rd},
+  year    = {2009},
+  publisher = {Springer}
+}
+
+@article{zenil2015two,
+ title = {Two-dimensional {Kolmogorov} complexity and an empirical validation of the {Coding} theorem method by compressibility},
+ author = {Zenil, Hector and Soler-Toscano, Fernando and Delahaye, Jean-Paul and Gauvrit, Nicolas},
+ year = 2015,
+ month = sep,
+ volume = 1,
+ pages = {e23},
+ journal = {PeerJ Computer Science},
+ issn = {2376-5992},
+ doi = {10.7717/peerj-cs.23}
+}
+
+@article{antao2018kolmogorov,
+author={Ant{\~a}o, R{\'o}mulo and Mota, Alexandre and Machado, J. A. Tenreiro},
+title="Kolmogorov complexity as a data similarity metric: application in mitochondrial {DNA}",
+journal="Nonlinear Dynamics",
+year="2018",
+month="Aug",
+day="01",
+volume="93",
+number="3",
+pages="1059--1071",
+issn="1573-269X",
+doi="10.1007/s11071-018-4245-7"
+}
+
+@article{faloutsos2007on,
+author="Faloutsos, Christos and Megalooikonomou, Vasileios",
+title="On data mining, compression, and Kolmogorov complexity",
+journal="Data Mining and Knowledge Discovery",
+year="2007",
+month="Aug",
+day="01",
+volume="15",
+number="1",
+pages="3--20",
+issn="1573-756X",
+doi="10.1007/s10618-006-0057-3"
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @Book{Anderberg83,
   author =   {Anderberg, M. R.},
   title =    {Cluster Analysis for Applications},
